--- a/stylesheets/location.scss
+++ b/stylesheets/location.scss
@@ -1,461 +1,19 @@
 @import 'base/color.scss';
 @import 'base/font.scss';
 @import 'base/mixin.scss';
+@import 'base/variable.scss';
 
 html {
-	font-size: 10px;
+	font-size: 12px;
 }
 body {
 	width: 100%;
 	overflow-x: hidden;
 }
-.location {
-	position: relative;
-	width: 100%;
-	height: 70vh;
-	.location-map {
-		width: 100%;
-		height: 100%;
-		overflow: hidden;
-		background-color: $ocean;
-		position: relative;
-		img {
-			width: 90%;
-			position: absolute;
-			bottom: -0.3rem;
-			left: -5%;
-		}
-	}
-	.location-content {
-		position: absolute;
-		width: 100%;
-		margin-top: 6%;
-		@include box-sizing(border-box);
-		padding: 0 12%;
-		top: 0;
-		left: 0;
-		.location-content__header {
-			position: relative;
-			width: 30%;
-			@include flexbox();
-			@include flex-direction(column);
-			.content-header__subtitle {
-				width: 100%;
-				font-size: 1.6rem;
-				font-family: 'oACYCZno';
-				color: $font-gray3;
-				text-align: left;
-			}
-			.content-header__title {
-				width: 100%;
-				font-size: 2.5rem;
-				line-height: 1.5;
-				font-family: 'oACYCZno';
-				font-weight: bold;
-				color: $font-gray1;
-				margin-top: 1rem;
-				text-align: left;
-				word-break: keep-all;
-				word-wrap: break-word;
-			}
-		}
-		.location-content__link {
-			position: relative;
-			width: 30%;
-			margin-top: 8rem;
-			.content-link__btn {
-				width: 80%;
-				height: 7.5rem;
-				border-radius: 7.5rem;
-				border: none;
-				background-color: $main-color;				
-				margin-left: -3rem;
-				@include box-sizing(border-box);
-				padding-left: 3rem;
-				padding-right: 3rem;
-				@include flexbox();
-				@include align-items(center);
-				@include justify-content(space-between);
-				cursor: pointer;
-				margin-top: 2rem;
-				&:hover {
-					span {
-						@include transform(translateX(10px));
-					}
-				}
-				p{
-					font-size: 2rem;
-					line-height: 2rem;
-					font-family: 'Do Hyeon';
-					color: $font-white;
-					text-align: left;
-					width: 65%;
-				}
-				span {
-					width: 2.5rem;
-					height: 2rem;
-					@include flexbox();
-					@include align-items(center);
-					@include transition(all 0.5s ease);
-					img {
-						width: 100%;
-					}
-				}
-			}
-		}
-	}
-}
-.location-info {
-	margin-top: 4rem;
-	@include flexbox();
-	@include justify-content(space-between);
-	@include box-sizing(border-box);
-	padding: 0 12%;
-	position: relative;
-	.info-tab-wrapper {
-		@include flexbox();
-		width: 50%;
-		margin-right: 25%;
-		.info-tab {
-			@include flexbox();
-			@include flex-direction(column);
-			width: 50%;
-			@include box-sizing(border-box);
-			padding-right: 7%;
-			position: relative;
-			.info-tab__header {
-				width: 100%;
-				@include flexbox();
-				@include align-items(center);
-				.tab-header-icon {
-					width: 20%;
-					margin-right: 5%;
-					img {
-						width: 100%;
-					}
-				}
-				.tab-header__title {
-					width: 65%;
-					font-size: 1.8rem;
-					font-family: 'oACYCZno';
-					font-weight: bold;
-					color: $font-gray1;				
-				}
-			}
-			.info-tab__content {
-				width: 100%;
-				margin-top: 2rem;
-				line-height: 1.5;
-				font-family: 'oACYCZno';
-				font-size: 1.6rem;
-			}
-		}
-	}	
-	.info-book {
-		width: 25%;
-		@include box-sizing(border-box);
-		padding-left: 7%;
-		&:hover {
-			.info-tab__book {
-				letter-spacing: 0.3rem;
-			}
-		}
-		.info-tab__book {
-			width: 100%;
-			height: 7.5rem;
-			border-radius: 7.5rem;
-			border: none;
-			background-color: $main-color;
-			font-size: 1.6rem;
-			font-family: 'Do Hyeon';
-			color: $font-white;
-			cursor: pointer;
-			letter-spacing: 0.1rem;
-			@include transition(all 0.5s ease);
-		}
-	}
-}
-.ad {
-	margin-top: 12rem;
-	@include flexbox();
-	@include box-sizing(border-box);
-	padding: 0 12%;
-	.ad-tab {
-		width: calc(100% / 3);
-		height: 15vw;
-		position: relative;
-		cursor: pointer;
-		&:hover {
-			.ad-tab__img {
-				img {
-					@include transform(scale(1));
-				}
-			}
-			.ad-tab__text {
-				span {
-					@include transform(translateX(10px));
-				}
-			}
-		}
-		&:nth-of-type(1) {
-			.ad-tab__img {
-				@include flexbox();
-				@include align-items(center);
-				@include justify-content(center);
-				img {
-					width: unset;
-					height: 100%;
-				}
-			}
-		}
-		.ad-tab__img {
-			width: 100%;
-			height: 100%;
-			position: relative;
-			overflow: hidden;
-			img {
-				width: 100%;
-				@include transform(scale(1.05));
-				@include transition(all 0.5s ease);
-			}
-		}
-		.ad-tab__filter {
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			top: 0;
-			left: 0;
-			background-color: $main-color-700;
-			&.red {
-				background-color: $red-500;
-			}
-			&.green {
-				background-color: $green-500;
-			}
-		}
-		.ad-tab__text {
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			top: 0;
-			left: 0;
-			@include flexbox();
-			@include flex-direction(column);
-			@include align-items(center);
-			@include justify-content(center);
-			@include box-sizing(border-box);
-			padding: 5% 10%;
-			.text-title {
-				width: 100%;
-				text-align: center;
-				font-size: 2.2rem;
-				color: $font-white;
-				font-family: 'Do Hyeon';
-			}
-			span {
-				margin-top: 2rem;
-				width: 40%;
-				height: 1.8rem;
-				@include flexbox();
-				@include justify-content(center);
-				@include transition(all 0.5s ease);
-				img {
-					width: 100%;
-				}
-			}
-		}
-	}
-}
+
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-.location {
-	height: 42vw;
-	.location-map {
-		img {
-			width: 117%;
-			position: absolute;
-			bottom: 0;
-			left: unset;
-			right: 10%;
-		}
-	}
-	.location-content {
-		margin-top: 6%;
-		padding: 0 10%;
-		.location-content__header {
-			.content-header__subtitle {
-			}
-			.content-header__title {
-			}
-		}
-		.location-content__link {
-			width: 40%;
-			margin-top: 7rem;
-			.content-link__btn {
-				height: 6.5rem;
-				border-radius: 6.5rem;
-			}		
-		}
-	}
-}
-.location-info {	
-	padding: 0 10%;
-	.info-tab-wrapper {
-		@include flexbox();
-		width: 50%;
-		margin-right: 25%;		
-	}	
-	.info-book {
-		width: 40%;
-		.info-tab__book {
-			height: 6.5rem;
-			border-radius: 6.5rem;			
-		}
-	}
-}
-.ad {
-	margin-top: 12rem;
-	padding: 0 10%;
-	.ad-tab {
-		.ad-tab__text {
-			.text-title {
-				width: 80%;
-				word-break: keep-all;
-				word-wrap: break-word;;
-			}			
-		}
-	}
-}
+
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
-.location {
-	height: 145vw;
-	.location-map {
-		width: 100%;
-		height: 100%;
-		img {
-			width: unset;
-			height: 110%;
-			position: absolute;
-			bottom: -10%;
-			left: unset;
-			right: -20%;
-		}
-	}
-	.location-content {
-		position: absolute;
-		width: 100%;
-		margin-top: 10%;
-		@include box-sizing(border-box);
-		padding: 0 7%;
-		top: 0;
-		left: 0;
-		.location-content__header {
-			width: 70%;
-			.content-header__subtitle {
-				font-size: 1rem;
-			}
-			.content-header__title {
-				width: 100%;
-				font-size: 2rem;
-				line-height: 1.5;
-				margin-top: 1rem;
-			}
-		}
-		.location-content__link {
-			position: relative;
-			width: 52%;
-			margin-top: 4rem;
-			.content-link__btn {
-				width: 100%;
-				height: 4.5rem;
-				border-radius: 4.5rem;		
-				margin-left: -1rem;
-				padding-left: 2rem;
-				padding-right: 2rem;
-				margin-top: 1rem;
-				p{
-					font-size: 1.4rem;
-					width: 80%;
-				}
-				span {
-					width: 1.8rem;
-				}
-			}
-		}
-	}
-}
-.location-info {
-	margin-top: 0rem;
-	@include flex-direction(column);
-	padding: 0 7%;
-	.info-tab-wrapper {
-		@include flex-direction(column);
-		width: 100%;
-		margin-right: 0;
-		.info-tab {
-			width: 100%;
-			padding-right: 0;
-			margin-top: 4rem;
-			.info-tab__header {
-				@include flex-direction(column);
-				.tab-header-icon {
-					width: 10%;
-					margin-right: 0;
-				}
-				.tab-header__title {
-					width: unset;
-					font-size: 1.6rem;
-					font-family: 'oACYCZno';
-					font-weight: bold;
-					color: $font-gray1;
-					margin-top: 1rem;			
-				}
-			}
-			.info-tab__content {
-				margin-top: 1rem;
-				font-size: 1.2rem;
-				text-align: center;
-			}
-		}
-	}	
-	.info-book {
-		width: 55%;
-		padding-left: 0;
-		margin-top: 3rem;
-		margin-left: calc(45% / 2);
-		.info-tab__book {
-			width: 100%;
-			height: 4.5rem;
-			border-radius: 4.5rem;
-			font-size: 1.2rem;
-		}
-	}
-}
-.ad {
-	margin-top: 8rem;
-	padding: 0 3%;
-	.ad-tab {
-		height: 40vw;		
-		.ad-tab__img {
-			@include flexbox();
-			@include align-items(center);
-			@include justify-content(center);
-			img {
-				width: unset;
-				height: 100%;
-				@include transform(scale(1.05));
-			}
-		}		
-		.ad-tab__text {
-			.text-title {
-				font-size: 1.6rem;
-				word-break: keep-all;
-				word-wrap: break-word;
-			}
-			span {
-				height: 1.5rem;
-			}
-		}
-	}
-}	
+	
 }
