--- a/stylesheets/rent.scss
+++ b/stylesheets/rent.scss
@@ -1,585 +1,19 @@
 @import 'base/color.scss';
 @import 'base/font.scss';
 @import 'base/mixin.scss';
+@import 'base/variable.scss';
 
 html {
-	font-size: 10px;
+	font-size: 12px;
 }
 body {
 	width: 100%;
 	overflow-x: hidden;
 }
-.rent {
-	width: 100%;
-	height: 65vh;
-	position: relative;
-	.rent-bg {
-		position: relative;
-		width: 100%;
-		height: 100%;
-		overflow: hidden;
-		@include flexbox();
-		@include align-items(center);
-		img {
-			width: 100%;
-		}
-	}
-	.rent-filter {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background-color: $main-color-700;
-	}
-	.rent-content {
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		left: 0;
-		@include box-sizing(border-box);
-		padding: 6% 12%;
-		@include flexbox();
-		@include flex-direction(column);
-		@include justify-content(space-between);
-		.rent-content__header {
-			width: 30%;
-			@include flexbox();
-			@include flex-direction(column);
-			position: relative;
-			.header-subtitle {
-				width: 100%;
-				font-size: 1.6rem;
-				font-family: 'oACYCZno';
-				color: $font-white;
-				text-align: left;
-			}
-			.header-title {
-				width: 100%;
-				font-size: 2.5rem;
-				line-height: 1.5;
-				font-family: 'oACYCZno';
-				font-weight: bold;
-				color: $font-white;
-				margin-top: 1rem;
-				text-align: left;
-				word-break: keep-all;
-				word-wrap: break-word;
-			}
-			.header-desc {
-				font-family: 'oACYCZno'; 
-				width: 80%;
-				height: 14rem;
-				font-size: 1.4rem;
-				line-height: 1.8;
-				word-break: keep-all;
-				word-wrap: break-word;
-				margin-top: 4.5rem;
-				text-align: left;
-				color: $font-white;
-			}
-		}
-	}
-	.rent-button {
-		width: 100%;
-		position: relative;
-		.rent-button__more {
-			position: absolute;
-			right: 0;
-			bottom: 0;
-			width: 25%;
-			height: 7.5rem;
-			border-radius: 7.5rem;
-			background-color: $main-color;
-			border: none;
-			@include box-sizing(border-box);
-			padding-left: 3rem;
-			padding-right: 3rem;
-			@include flexbox();
-			@include align-items(center);
-			@include justify-content(space-between);
-			cursor: pointer;
-			@include box-shadow(1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5));
-			&:hover {
-				span {
-					@include transform(translateX(10px));
-				}
-			}
-			p{
-				font-size: 2rem;
-				line-height: 2rem;
-				font-family: 'Do Hyeon';
-				color: $font-white;
-			}
-			span {
-				width: 2.5rem;
-				height: 2rem;
-				@include flexbox();
-				@include align-items(center);
-				@include transition(all 0.5s ease);
-				img {
-					width: 100%;
-				}
-			}
-		}
-	}
-}
-.rent-fee {
-	margin-top: 12rem;
-	width: 100%;
-	@include box-sizing(border-box);
-	padding: 0 12%;
-	@include flexbox();
-	.rent-fee__text {
-		width: calc(92% / 3);
-		@include flexbox();
-		@include flex-direction(column);
-		@include box-sizing(border-box);
-		padding-right: 5%;
-		.fee-text__subtitle {
-			width: 100%;
-			font-size: 1.6rem;
-			font-family: 'oACYCZno';
-			color: $font-gray3;
-		}
-		.fee-text__title {
-			width: 100%;
-			font-size: 2.5rem;
-			line-height: 1.5;
-			font-family: 'oACYCZno';
-			font-weight: bold;
-			color: $font-gray1;
-			margin-top: 1rem;
-			word-break: keep-all;
-			word-wrap: break-word;
-		}
-		.fee-text__desc {
-			margin-top: 4.5rem;
-			word-break: keep-all;
-			word-wrap: break-word;
-			font-family: 'oACYCZno';
-			color: $font-gray1;
-			width: 100%;
-			font-size: 1.4rem;
-			line-height: 1.8;
-		}
-	}
-	.rent-fee__card {
-		width: calc(92% / 3);
-		height: 28vw;
-		margin-left: 4%;
-		position: relative;
-		@include box-shadow(1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5));
-		.card-bg {
-			width: 100%;
-			height: 100%;
-			overflow: hidden;
-			@include flexbox();
-			@include justify-content(center);
-			@include align-items(center);
-			img {
-				height: 100%;
-			}
-		}
-		.card-filter {
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background-color: $main-color-500;
-			&.orange {
-				background-color: $orange-500;
-			}
-		}
-		.card-content {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			@include flexbox();
-			@include flex-direction(column);
-			@include align-items(center);
-			@include justify-content(space-between);
-			@include box-sizing(border-box);
-			padding: 15% 0;
-			.card-title {
-				color: $font-white;
-				font-family: 'Do Hyeon';
-				font-size: 2.2rem;
-				width: 70%;
-				text-align: center;
-				border: 2px solid $font-white;
-				padding: 2rem 3rem;
-				@include box-sizing(border-box);
-				border-radius: 6rem;
-			}
-			.card-subtitle {
-				color: $font-white;
-				font-family: 'oACYCZno';
-				font-size: 1.6rem;
-				margin-top: 2rem;
-				width: 100%;
-				text-align: center;
-			}
-			.card-desc {
-				color: $font-white;
-				font-family: 'oACYCZno';
-				font-size: 1.6rem;
-				line-height: 1.8;
-				word-break: keep-all;
-				word-wrap: break-word;
-				margin-top: 3rem;
-				text-align: center;
-				width: 60%;
-			}
-			.card-price {
-				color: $font-white;
-				font-family: 'Do Hyeon';
-				font-size: 2rem;
-				letter-spacing: 0.1rem;
-				text-align: center;
-				width: 100%;
-				margin-top: 4rem;
-			}
-		}
-	}
-}
-.ad {
-	margin-top: 12rem;
-	@include flexbox();
-	@include box-sizing(border-box);
-	padding: 0 12%;
-	.ad-tab {
-		width: calc(100% / 3);
-		height: 15vw;
-		position: relative;
-		cursor: pointer;
-		&:hover {
-			.ad-tab__img {
-				img {
-					@include transform(scale(1));
-				}
-			}
-			.ad-tab__text {
-				span {
-					@include transform(translateX(10px));
-				}
-			}
-		}
-		&:nth-of-type(1), &:nth-of-type(2) {
-			.ad-tab__img {
-				@include flexbox();
-				@include align-items(center);
-				@include justify-content(center);
-				img {
-					width: unset;
-					height: 100%;
-				}
-			}
-		}
-		.ad-tab__img {
-			width: 100%;
-			height: 100%;
-			position: relative;
-			overflow: hidden;
-			img {
-				width: 100%;
-				@include transform(scale(1.05));
-				@include transition(all 0.5s ease);
-			}
-		}
-		.ad-tab__filter {
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			top: 0;
-			left: 0;
-			background-color: $main-color-700;
-			&.red {
-				background-color: $red-500;
-			}
-			&.green {
-				background-color: $green-500;
-			}
-		}
-		.ad-tab__text {
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			top: 0;
-			left: 0;
-			@include flexbox();
-			@include flex-direction(column);
-			@include align-items(center);
-			@include justify-content(center);
-			@include box-sizing(border-box);
-			padding: 5% 10%;
-			.text-title {
-				width: 100%;
-				text-align: center;
-				font-size: 2.2rem;
-				color: $font-white;
-				font-family: 'Do Hyeon';
-			}
-			span {
-				margin-top: 2rem;
-				width: 40%;
-				height: 1.8rem;
-				@include flexbox();
-				@include justify-content(center);
-				@include transition(all 0.5s ease);
-				img {
-					width: 100%;
-				}
-			}
-		}
-	}
-}
+
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-.rent {
-	height: 45vw;
-	.rent-bg {
-	}
-	.rent-content {
-		padding: 6% 10%;
-		.rent-content__header {
-			width: 35%;
-			.header-subtitle {
-			}
-			.header-title {
-			}
-			.header-desc {
-			}
-		}
-	}
-	.rent-button {
-		.rent-button__more {
-			width: 28%;
-			height: 6.5rem;
-			border-radius: 6.5rem;
-			padding-right: 3rem;
-		}
-	}
-}
-.rent-fee {
-	margin-top: 12rem;
-	padding: 0 10%;
-	.rent-fee__text {
-		width: calc(92% / 3);
-		padding-right: 5%;
-		.fee-text__subtitle {
-			width: 100%;
-			font-size: 1.2rem;
-			font-family: 'oACYCZno';
-			color: $font-gray3;
-		}
-		.fee-text__title {
-			width: 100%;
-			font-size: 2rem;
-			line-height: 2.8rem;
-			font-family: 'oACYCZno';
-			font-weight: bold;
-			color: $font-gray1;
-			margin-top: 1rem;
-			word-break: keep-all;
-			word-wrap: break-word;
-		}
-		.fee-text__desc {
-			margin-top: 4.5rem;
-			word-break: keep-all;
-			word-wrap: break-word;
-			font-family: 'oACYCZno';
-			color: $font-gray1;
-			width: 100%;
-			font-size: 1.2rem;
-			line-height: 2.2rem;
-		}
-	}
-	.rent-fee__card {
-		height: 37vw;
-		.card-bg {
-		}
-		.card-content {
-			.card-title {
-				font-size: 1.6rem;
-				width: 70%;
-				padding: 1.5rem 3rem;
-			}
-			.card-subtitle {
-				font-size: 1.4rem;
-			}
-			.card-desc {
-			}
-			.card-price {
-			}
-		}
-	}
-}
-.ad {
-	margin-top: 12rem;
-	padding: 0 10%;
-	.ad-tab {
-		.ad-tab__text {
-			.text-title {
-				width: 80%;
-				word-break: keep-all;
-				word-wrap: break-word;;
-			}			
-		}
-	}
-}
+
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
-.rent {
-	height: 110vw;
-	.rent-bg {		
-		@include justify-content(center);
-		img {
-			width: unset;
-			height: 100%;
-		}
-	}
-	.rent-content {
-		padding: 15% 7% 10% 7%;
-		.rent-content__header {
-			width: 100%;
-			.header-subtitle {
-				font-size: 1rem;
-			}
-			.header-title {
-				font-size: 2rem;
-				line-height: 1.5;
-			}
-			.header-desc {
-				width: 80%;
-				height: 14rem;
-				font-size: 1.2rem;
-				line-height: 2.2rem;
-				margin-top: 4.5rem;
-			}
-		}
-	}
-	.rent-button {
-		width: 100%;
-		position: relative;
-		.rent-button__more {
-			position: absolute;
-			right: 0;
-			bottom: 0;
-			width: 50%;
-			height: 7.5rem;
-			border-radius: 7.5rem;
-			padding-left: 3rem;
-			padding-right: 3rem;
-			@include box-shadow(1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5));
-			p{
-				font-size: 1.6rem;
-				line-height: 2rem;
-				width: 50%;
-			}
-			span {
-				width: 2.5rem;
-				height: 2rem;
-			}
-		}
-	}
-}
-.ad {
-	margin-top: 8rem;
-	padding: 0 3%;
-	.ad-tab {
-		height: 40vw;		
-		.ad-tab__img {
-			@include flexbox();
-			@include align-items(center);
-			@include justify-content(center);
-			img {
-				width: unset;
-				height: 100%;
-				@include transform(scale(1.05));
-			}
-		}		
-		.ad-tab__text {
-			.text-title {
-				font-size: 1.4rem;
-				word-break: keep-all;
-				word-wrap: break-word;
-			}
-			span {
-				height: 1.5rem;
-			}
-		}
-	}
-}
-.rent-fee {
-	margin-top: 8rem;
-	padding: 0 6%;
-	@include flex-direction(column);
-	.rent-fee__text {
-		width: 100%;
-		padding-right: 1%;
-		padding-left: 1%;
-		.fee-text__subtitle {
-			font-size: 1rem;
-			text-align: center;
-		}
-		.fee-text__title {
-			width: 100%;
-			font-size: 1.6rem;
-			line-height: 2.4rem;
-			margin-top: 1rem;
-			text-align: center;
-		}
-		.fee-text__desc {
-			margin-top: 3.5rem;
-			width: 80%;
-			margin-left: 10%;
-			font-size: 1.2rem;
-			line-height: 2.2rem;
-			text-align: center;
-		}
-	}
-	.rent-fee__card {
-		width: 100%;
-		margin-top: 4rem;
-		height: unset;
-		margin-left: 0;
-		@include box-shadow(0.1rem 0.4rem 3rem rgba(76, 76, 76, 0.5));
-		.card-bg {
-			height: 82vw;
-		}
-		.card-content {
-			height: unset;			
-			padding: 12% 0;
-			.card-title {
-				font-size: 1.6rem;
-				width: 60%;
-				padding: 1rem 3rem;
-				border-radius: 6rem;
-			}
-			.card-subtitle {
-				font-size: 1.2rem;
-				margin-top: 2rem;
-				width: 100%;
-			}
-			.card-desc {
-				font-size: 1.4rem;
-				line-height: 1.5;
-				margin-top: 4rem;
-				width: 60%;
-			}
-			.card-price {
-				color: $font-white;
-				font-family: 'Do Hyeon';
-				font-size: 2rem;
-				letter-spacing: 0.1rem;
-				text-align: center;
-				width: 100%;
-				margin-top: 4rem;
-			}
-		}
-	}
-}
+
 }
