--- a/stylesheets/base/_font.scss
+++ b/stylesheets/base/_font.scss
@@ -1,24 +1,17 @@
 @font-face { 
-	font-family: 'oACYCZno'; 
-	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/oACYCZno.woff') format('woff'); 
+	font-family: 'TmonMonsori'; 
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff') format('woff'); 
 	font-weight: normal; 
 	font-style: normal; 
 }
-@font-face {
-  font-family: 'Lachata';
-  	src: url('../../font/Lachata.ttf.eot') format('embedded-opentype');
-    src: url('../../font/Lachata.ttf.eot?#iefix') format('embedded-opentype'),
-    	 url('../../font/Lachata.ttf.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@import url('https://fonts.googleapis.com/css?family=Do+Hyeon');
-//font-family: 'Do Hyeon', sans-serif;
-@font-face { 
-	font-family: 'OTEnjoystoriesBA'; 
-	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/OTEnjoystoriesBA.woff') format('woff'); 
-	font-weight: normal; 
-	font-style: normal; 
-}
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700');
-//font-family: 'Noto Sans KR', sans-serif;
+
+@import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
+//font-family: 'NanumSquare', sans-serif;
+//font-weight: 300, 400, 700, 800;
+
+@import url('https://fonts.googleapis.com/css?family=Teko:600');
+//font-family: 'Teko', sans-serif;
+////////////////////////custom
+$desktop: 12px;
+
+$gnb: 1.35rem;
