--- a/stylesheets/base/_mixin.scss
+++ b/stylesheets/base/_mixin.scss
@@ -90,23 +90,16 @@
           backface-visibility: $val;
 }
 //custom//
-@mixin background-gradient() {
-  background: -webkit-radial-gradient(circle, rgba(4,20,25,1) 0%, rgba(4,20,25,1) 70%, rgba(4,12,16,1) 100%);
-  background: -o-radial-gradient(circle, rgba(4,20,25,1) 0%, rgba(4,20,25,1) 70%, rgba(4,12,16,1) 100%);
-  background: radial-gradient(circle, rgba(4,20,25,1) 0%, rgba(4,20,25,1) 70%, rgba(4,12,16,1) 100%);
+@mixin dark-gradient() {
+  background: rgb(20,20,20);
+  background: -moz-linear-gradient(270deg, rgba(20,20,20,0) 0%, rgba(20,20,20,0.4) 100%);
+  background: -webkit-linear-gradient(270deg, rgba(20,20,20,0) 0%, rgba(20,20,20,0.4) 100%);
+  background: linear-gradient(270deg, rgba(20,20,20,0) 0%, rgba(20,20,20,0.4) 100%);
 }
-@mixin background-color(){
-  background: -moz-linear-gradient(180deg, rgba(4,20,25,0.3) 0%, rgba(4,20,25,0.9) 60%, rgba(4,20,25,1) 100%);
-  background: -webkit-linear-gradient(180deg, rgba(4,20,25,0.3) 0%, rgba(4,20,25,0.9) 60%, rgba(4,20,25,1) 100%);
-  background: linear-gradient(180deg, rgba(4,20,25,0.3) 0%, rgba(4,20,25,0.9) 60%, rgba(4,20,25,1) 100%);
-}
-@mixin card-bg(){
-  background: -moz-linear-gradient(0deg, rgba(222,222,222, 1) 0%, rgba(235,235,235,1) 100%);
-  background: -webkit-linear-gradient(0deg, rgba(222,222,222, 1) 0%, rgba(235,235,235,1) 100%);
-  background: linear-gradient(0deg, rgba(222,222,222, 1) 0%, rgba(235,235,235,1) 100%);
-}
-@mixin lesson-card-bg(){
-  background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, rgba(226,227,236, 0.9) 100%);
-  background: -webkit-linear-gradient(180deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, rgba(226,227,236, 0.9) 100%);
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, rgba(226,227,236, 0.9) 100%);
+
+@mixin main-gradient() {
+  background: rgb(255,250,167);
+  background: -moz-linear-gradient(135deg, rgba(255,250,167,1) 0%, rgba(42,198,255,1) 100%);
+  background: -webkit-linear-gradient(135deg, rgba(255,250,167,1) 0%, rgba(42,198,255,1) 100%);
+  background: linear-gradient(135deg, rgba(255,250,167,1) 0%, rgba(42,198,255,1) 100%);
 }
