--- a/stylesheets/css/header.css
+++ b/stylesheets/css/header.css
@@ -1,91 +1,29 @@
-@import url("https://fonts.googleapis.com/css?family=Do+Hyeon");
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700");
-@font-face { font-family: 'oACYCZno'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/oACYCZno.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'Lachata'; src: url("../../font/Lachata.ttf.eot") format("embedded-opentype"); src: url("../../font/Lachata.ttf.eot?#iefix") format("embedded-opentype"), url("../../font/Lachata.ttf.woff") format("woff"); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'OTEnjoystoriesBA'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/OTEnjoystoriesBA.woff") format("woff"); font-weight: normal; font-style: normal; }
-html { font-size: 10px; }
+@import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
+@import url("https://fonts.googleapis.com/css?family=Teko:600");
+@font-face { font-family: 'TmonMonsori'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff") format("woff"); font-weight: normal; font-style: normal; }
+html { font-size: 12px; }
 
 body { width: 100%; overflow-x: hidden; }
 
-@-webkit-keyframes bounceInUp { from,
-  60%,
-  75%,
-  90%,
-  to { -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-  from { opacity: 0; -webkit-transform: translate3d(0, 30px, 0); transform: translate3d(0, 30px, 0); }
-  60% { opacity: 1; -webkit-transform: translate3d(0, -10px, 0); transform: translate3d(0, -10px, 0); }
-  75% { -webkit-transform: translate3d(0, 5px, 0); transform: translate3d(0, 5px, 0); }
-  90% { -webkit-transform: translate3d(0, -5px, 0); transform: translate3d(0, -5px, 0); }
-  to { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); } }
-@keyframes bounceInUp { from,
-  60%,
-  75%,
-  90%,
-  to { -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-  from { opacity: 0; -webkit-transform: translate3d(0, 30px, 0); transform: translate3d(0, 30px, 0); }
-  60% { opacity: 1; -webkit-transform: translate3d(0, -10px, 0); transform: translate3d(0, -10px, 0); }
-  75% { -webkit-transform: translate3d(0, 5px, 0); transform: translate3d(0, 5px, 0); }
-  90% { -webkit-transform: translate3d(0, -5px, 0); transform: translate3d(0, -5px, 0); }
-  to { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); } }
-.bounceInUp { -webkit-animation-name: bounceInUp; animation-name: bounceInUp; }
-
-.header { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border-bottom: 3px solid #1338d1; }
-.header .header-left { width: calc((79.97% / 4) + 10%); height: 15rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border-right: 3px solid #1338d1; padding-left: 10%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; }
-.header .header-left .header__logo { width: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 50%; }
-.header .header-left .header__logo a { width: 100%; margin-top: 0.5rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
-.header .header-left .header__logo a img { width: 70%; }
-.header .header-left .header__brand { width: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 50%; margin-top: 1rem; }
-.header .header-left .header__brand a { width: 100%; text-decoration: none; text-align: center; color: #1338d1; font-size: 1.4rem; line-height: 1.7rem; font-family: 'Lachata'; font-weight: bold; letter-spacing: 0.1rem; display: block; }
-.header .header-right { width: calc((79.97% * 0.75) + 10.03%); height: 15rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-.header .header-right .header__weather-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; height: 60%; position: relative; }
-.header .header-right .header__weather-wrapper .header-weather { width: 100%; height: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border-bottom: 3px solid #1338d1; position: relative; }
-.header .header-right .header__weather-wrapper .header-weather .weather { width: 100%; height: 100%; position: relative; display: none; }
-.header .header-right .header__weather-wrapper .header-weather .weather.current { display: -webkit-box; display: -ms-flexbox; display: flex; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-bg { width: 100%; height: 100%; overflow: hidden; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-bg img { width: 100%; position: absolute; top: 0; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content { position: absolute; top: 0; left: 0; width: 80%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__time { width: 5%; background-color: rgba(255, 255, 255, 0.25); border-radius: 7rem; color: white; font-family: 'oACYCZno'; font-size: 1.4rem; padding: 1.5rem 2.5rem; margin-left: 5%; text-align: center; opacity: 0; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__time.show-up { -webkit-animation: bounceInUp 0.5s ease; animation: bounceInUp 0.5s ease; opacity: 1; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info { width: 55%; display: -webkit-box; display: -ms-flexbox; display: flex; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; width: calc(85% / 3); height: 6rem; margin-right: 5%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; background-color: rgba(255, 255, 255, 0.25); border-radius: 7rem; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; opacity: 0; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab.show-up { -webkit-animation: bounceInUp 0.5s ease; animation: bounceInUp 0.5s ease; opacity: 1; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab:hover { background-color: rgba(19, 56, 209, 0.5); }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab:nth-of-type(2).show-up { -webkit-animation: bounceInUp 0.5s ease 0.1s; animation: bounceInUp 0.5s ease 0.1s; opacity: 1; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab:nth-of-type(3) .info-tab__icon { width: 20%; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab:nth-of-type(3).show-up { -webkit-animation: bounceInUp 0.5s ease 0.2s; animation: bounceInUp 0.5s ease 0.2s; opacity: 1; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab .info-tab__icon { width: 30%; margin-right: 10%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab .info-tab__icon img { width: 100%; }
-.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab .info-tab__text { width: 20%; font-size: 1.2rem; color: white; font-family: 'oACYCZno'; }
-.header .header-right .header__weather-wrapper .header-waether-dir { position: absolute; right: 0; top: 15%; width: 20%; height: 70%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 15%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
-.header .header-right .header__weather-wrapper .header-waether-dir .dir-up { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; opacity: 0.6; }
-.header .header-right .header__weather-wrapper .header-waether-dir .dir-up:hover { -webkit-transform: translateY(-10px); -ms-transform: translateY(-10px); transform: translateY(-10px); opacity: 1; }
-.header .header-right .header__weather-wrapper .header-waether-dir .dir-up img { height: 50%; cursor: pointer; -webkit-transform: rotate(-90deg); -ms-transform: rotate(-90deg); transform: rotate(-90deg); }
-.header .header-right .header__weather-wrapper .header-waether-dir .dir-down { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; opacity: 0.6; }
-.header .header-right .header__weather-wrapper .header-waether-dir .dir-down:hover { -webkit-transform: translateY(10px); -ms-transform: translateY(10px); transform: translateY(10px); opacity: 1; }
-.header .header-right .header__weather-wrapper .header-waether-dir .dir-down img { cursor: pointer; height: 50%; -webkit-transform: rotate(90deg); -ms-transform: rotate(90deg); transform: rotate(90deg); }
-.header .header-right .header__nav { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; height: 40%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 18%; }
-.header .header-right .header__nav .nav-tab { width: calc(100% / 3); height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; cursor: pointer; text-decoration: none; }
-.header .header-right .header__nav .nav-tab.active { width: calc(100% / 3); height: 100%; background: #ff5059; }
-.header .header-right .header__nav .nav-tab.active p { color: white; }
-.header .header-right .header__nav .nav-tab p { font-family: 'Do Hyeon', sans-serif; color: #1338d1; font-size: 2rem; }
-
-.mobile-menu { display: none; }
-
-@media screen and (min-width: 768px) and (max-width: 1024px) { .header .header-right .header__weather-wrapper .header-weather .weather .weather-bg img { width: unset; height: 100%; }
-  .header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info { width: 65%; }
-  .header .header-right .header__weather-wrapper .header-waether-dir { top: 15%; width: 15%; padding-right: 10%; }
-  .header .header-right .header__nav { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; height: 40%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 14%; }
-  .mobile-menu { display: none; } }
-@media screen and (min-width: 320px) and (max-width: 767px) { .header { width: 100%; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; border-bottom: 2px solid #1338d1; }
-  .header .header-left { width: 100%; height: 8.5rem; border-right: none; padding-left: 0; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; border-bottom: 2px solid #1338d1; }
-  .header .header-left .header__logo { width: 16%; padding-right: 0; }
-  .header .header-left .header__logo a { width: 100%; margin-top: 0; }
-  .header .header-left .header__logo a img { width: 100%; }
-  .header .header-left .header__brand { width: 100%; padding-right: 0; margin-top: 0.6rem; }
-  .header .header-left .header__brand a { width: 100%; font-size: 1rem; line-height: 1.2rem; }
-  .header .header-right { width: 100%; height: auto; }
-  .header .header-right .header__weather-wrapper { display: none; }
-  .header .header-right .header__nav { height: 3.5rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 0; }
-  .header .header-right .header__nav .nav-tab p { font-size: 1.6rem; } }
+.header { width: 100%; position: relative; }
+.header .gnb { width: 100%; height: 85px; background-color: white; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; }
+.header .gnb .gnb-list { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; margin-left: 85px; width: calc(((100% - 170px) / 6)*5); height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: flex-end; -ms-flex-pack: flex-end; justify-content: flex-end; }
+.header .gnb .gnb-list .gnb-tab { width: 20%; height: 100%; background-color: transparent; }
+.header .gnb .gnb-list .gnb-tab.current { background-color: #2ac6ff; }
+.header .gnb .gnb-list .gnb-tab.current a span { color: white; }
+.header .gnb .gnb-list .gnb-tab a { width: 100%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-text-decoration: none; text-decoration: none; }
+.header .gnb .gnb-list .gnb-tab a span { color: #a5a5a5; font-family: 'NanumSquare', sans-serif; font-weight: 800; font-size: 1.35rem; letter-spacing: 0.1rem; }
+.header .gnb .wave-tab { width: calc(((100% - 170px) / 6) + 85px); height: 100%; background-color: #2b2b2b; }
+.header .gnb .wave-tab a { width: 100%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-text-decoration: none; text-decoration: none; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.header .gnb .wave-tab a:hover { background-color: #606060; }
+.header .gnb .wave-tab a span { color: white; font-family: 'NanumSquare', sans-serif; font-weight: 800; font-size: 1.35rem; letter-spacing: 0.1rem; }
+.header .gnb .wave-tab a img { height: 1.6rem; width: auto; margin-left: 7px; }
+.header .nav-mobile { display: none; }
+.header .logo { position: absolute; background: #fffaa7; background: -moz-linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); background: -webkit-linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); background: linear-gradient(135deg, #fffaa7 0%, #2ac6ff 100%); width: 16.645%; height: 170px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; top: 0; left: 85px; z-index: 9999; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.header .logo:hover { -webkit-box-shadow: 0 5px 15px rgba(40, 40, 40, 0.7); -moz-box-shadow: 0 5px 15px rgba(40, 40, 40, 0.7); box-shadow: 0 5px 15px rgba(40, 40, 40, 0.7); }
+.header .logo .logo-symbol { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.header .logo .logo-symbol img { width: 40%; margin-top: 2.5rem; }
+.header .logo .logo-title { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.header .logo .logo-title img { width: 40%; margin-bottom: 2.5rem; }
 
 /*# sourceMappingURL=header.css.map */
